<resources>
    <string name="app_name">Multichat Client</string>
    <string name="title">AlexToAlex</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="register">Sign up</string>
    <string name="no_account">do you haven\'t an account? Click</string>
    <string name="link">HERE</string>
    <string name="HeaderList">Lista Gruppi</string>
    <string name="write_a_message">Write a message</string>
    <string name="todo">TODO</string>
    <string name="message">Scrivi un messaggio</string>
    <string name="stringaVuota"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_group_name">Inserire il nome del gruppo</string>
    <string name="group_name">Inserire il nome del gruppo</string>
    <string name="info_group">Info gruppo</string>
    <string name="delete_group">Cancella gruppo</string>
</resources>