<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.RegistrazioneFragment" >

    <data>
        <variable
            name="registrazioneViewModel"
            type="com.mcc.multichatclone.viewcontroller.RegistrazioneViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="104dp"
            android:layout_height="45dp"
            android:fontFamily="@font/indigo_daisy"
            android:text="@string/register"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.137" />

        <EditText
            android:id="@+id/nome_text"
            android:layout_width="250dp"
            android:layout_height="47dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintVertical_bias="0.179" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="250dp"
            android:layout_height="47dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nome_text"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="233dp"
            android:layout_height="33dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login"
            android:onClick="@{() -> registrazioneViewModel.signin(nomeText.getText().toString(), passwordText.getText().toString())}"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            app:layout_constraintVertical_bias="0.716"
            tools:ignore="HardcodedText" />

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="15dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="@{() -> registrazioneViewModel.tornaIndietro()}"
                android:background="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,UsingOnClickInXml" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>